// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`newline-before-arrow.js [espree] format 1`] = `
"Unexpected token => (2:1)
  1 | async x
> 2 | => x
    | ^
  3 |"
`;

exports[`newline-before-arrow.js [meriyah] format 1`] = `
"[2:2]: No line break is allowed after '=>' (2:2)
  1 | async x
> 2 | => x
    |  ^
  3 |"
`;

exports[`newline-before-arrow.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
async x
=> x

=====================================output=====================================
async (x) => x;

================================================================================
`;
